Continue clean up

--- a/trustpoint/templates/workflows/pending_table.html
+++ b/trustpoint/templates/workflows/pending_table.html
@@ -164,10 +164,10 @@
 
     <div class="card-footer d-flex justify-content-between tp-sticky-footer">
       <div class="tp-card-btn-footer m-1">
-        <button type="submit" name="action" value="Approved" class="btn btn-success me-2">
+        <button type="submit" name="action" value="approve" class="btn btn-success me-2">
           {% trans 'Approve selected' %}
         </button>
-        <button type="submit" name="action" value="Rejected" class="btn btn-danger">
+        <button type="submit" name="action" value="reject" class="btn btn-danger">
           {% trans 'Reject selected' %}
         </button>
       </div>
