Replace IssuedCredentialPurpose with issued_using_cert_profile

--- a/trustpoint/templates/devices/credentials/certificate_download.html
+++ b/trustpoint/templates/devices/credentials/certificate_download.html
@@ -11,9 +11,9 @@
                 <div class="card-header">
                     <div class="">
                         {% if issued_credential.issued_credential_type == 1 %}
-                            <h1>{% trans 'Download Issued' %} {{ issued_credential.get_issued_credential_purpose_display }} {% trans 'Application Certificate' %}</h1>
+                            <h1>{% trans 'Download Issued' %} {{ issued_credential.issued_using_cert_profile }} {% trans ' Application Certificate' %}</h1>
                         {% else %}
-                            <h1>{% trans 'Download Issued Domain Certificate' %}</h1>
+                            <h1>{% trans 'Download Issued Domain Credential' %}</h1>
                         {% endif %}
                     </div>
                 </div>
