--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -224,8 +224,8 @@
                             </a>
                         </th>
                         <th>
-                            <a href="#" onclick="updateQueryParam(event, 'sort', 'issued_credential_purpose')">
-                                {% trans 'Credential Purpose' %}
+                            <a href="#" onclick="updateQueryParam(event, 'sort', 'issued_using_cert_profile')">
+                                {% trans 'Certificate Profile' %}
                             </a>
                         </th>
                         <th>
@@ -257,7 +257,7 @@
                                 {{ cred.common_name }}
                             </a>
                         </td>
-                        <td>{{ cred.get_issued_credential_purpose_display }}</td>
+                        <td>{{ cred.issued_using_cert_profile }}</td>
                         <td>{{ cred.created_at }}</td>
                         <td>{{ cred.expiration_date }}</td>
                         <td>{{ cred.expires_in }}</td>
@@ -268,8 +268,9 @@
                     </tr>
                     {% empty %}
                     <tr>
-                        <td colspan="8" class="middle">{% trans 'No application credentials are issued to this device
-                            yet.' %}</td>
+                        <td colspan="8" class="middle">
+                            {% trans 'No application credentials are issued to this device yet.' %}
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
