--- a/trustpoint/templates/signer/signed_messages.html
+++ b/trustpoint/templates/signer/signed_messages.html
@@ -13,16 +13,15 @@
     </div>
 
     <div class="card-body text-start" style="overflow-y: auto; flex-grow: 1; max-height: 90%;">
-        <div class="table-responsive">
-            <table class="table table-borderless table-hover align-middle mb-0">
-                <thead>
-                    <tr>
-                        <th class="fw-bold">{% trans "Hash Value" %}</th>
-                        <th class="fw-bold">{% trans "Signature" %}</th>
-                        <th class="fw-bold">{% trans "Created At" %}</th>
-                    </tr>
-                </thead>
-                <tbody>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>{% trans "Hash Value" %}</th>
+                <th>{% trans "Signature" %}</th>
+                <th>{% trans "Created At" %}</th>
+            </tr>
+            </thead>
+            <tbody>
                 {% for message in signed_messages %}
                     <tr>
                         <td style="max-width: 300px; word-break: break-all; font-family: monospace; font-size: 0.9em;">
@@ -39,10 +38,9 @@
                     <tr>
                         <td colspan="3" class="text-center">{% trans "No signed messages found" %}</td>
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
 
     <div class="card-footer d-flex justify-content-between tp-sticky-footer">
