--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -39,8 +39,7 @@
 
                         {% if device.domain.issuing_ca %}
                         <p><strong>{% trans "Issuing CA" %}:</strong>
-                            <a href="{% url 'pki:issuing_cas-detail' device.domain.issuing_ca.pk %}">{{
-                                device.domain.issuing_ca }}</a>
+                            <a href="{% url 'pki:issuing_cas-detail' device.domain.issuing_ca.pk %}">{{ device.domain.issuing_ca }}</a>
                         </p>
 
                         {% with cert=device.domain.issuing_ca.credential.certificate %}
