--- a/trustpoint/templates/pki/certificates/details.html
+++ b/trustpoint/templates/pki/certificates/details.html
@@ -57,6 +57,7 @@
                     {% include 'pki/certificates/components/extensions/key_usage_extension.html' %}
                     {% include 'pki/certificates/components/extensions/issuer_alternative_name_extension.html' %}
                     {% include 'pki/certificates/components/extensions/subject_alternative_name_extension.html' %}
+                    {% include 'pki/certificates/components/extensions/subject_alternative_name_extension_content.html' %}
                     {% include 'pki/certificates/components/extensions/basic_constraints_extension.html' %}
                 </div>
             </div>
@@ -75,11 +76,9 @@
     </div>
     <div class="card-footer d-flex justify-content-between align-items-center">
         <div class="tp-card-btn-footer m-1">
-            <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans
-                'Back' %}</button>
+            <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
             <a href="{% url 'pki:certificates' %}" class="btn btn-secondary btn-half">{% trans 'Cancel' %}</a>
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pemModal">{% trans
-                'Show PEM' %}</button>
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#pemModal">{% trans 'Show PEM' %}</button>
             <a href="{% url 'pki:certificate-download' pk=cert.id %}" class="btn btn-primary">{% trans 'Download' %}</a>
         </div>
     </div>
