--- a/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
+++ b/trustpoint/templates/devices/credentials/certificate_lifecycle_management.html
@@ -267,8 +267,7 @@
                     </tr>
                     {% empty %}
                     <tr>
-                        <td colspan="8" class="middle">{% trans 'No application credentials are issued to this device
-                            yet.' %}</td>
+                        <td colspan="8" class="middle">{% trans 'No application credentials are issued to this device yet.' %}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
