--- a/trustpoint/templates/devices/create_choose_onboarding.html
+++ b/trustpoint/templates/devices/create_choose_onboarding.html
@@ -10,21 +10,32 @@
                 <h1>{% trans 'Create new OPC UA GDS' %}</h1>
             {% endif %}
         </div>
-        
-            <div class="card-body py-3">
-                <h2>Choose Onboarding Mechanism</h2>
-                <hr>
-                <p>If a domain credential shall be issued that will in turn be used for authentication, please choose Onboarding. <br>
-                If the trustpoint shall directly issue application certificates without using a domain credential, please choose No Onboarding.</p>
-                <hr>
-                <a href="{% url use_onboarding_url %}" class="btn btn-primary mb-3 min-width-20">Use Onboarding (Recommended)</a><br>
-                <a href="{% url use_no_onboarding_url %}" class="btn btn-primary min-width-20">Do not use onboarding</a>
-            </div>
-            <div class="card-footer d-flex justify-content-between align-items-center">
-                <div class="tp-card-btn-footer m-1">
-                    <a href="{% url cancel_create_url %}" class="btn btn-secondary min-width-20">{% trans 'Cancel' %}</a>
+
+        <div class="card-body py-3">
+            <h2 class="d-inline-block">Choose Onboarding Mechanism</h2>
+
+            <div class="d-flex gap-3 mt-3">
+                <div class="card flex-fill d-flex flex-column">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title"><strong>Use Onboarding (Recommended)</strong></h5>
+                        <hr>
+                        <p class="card-text flex-grow-1">If a domain credential shall be issued that will in turn be used for authentication, please choose Onboarding.</p>
+                        <a href="{% url use_onboarding_url %}" class="btn btn-primary mt-auto w-100" style="max-width: 250px; margin-left: auto; margin-right: auto;">
+                            Onboard
+                        </a>
+                    </div>
+                </div>
+                <div class="card flex-fill d-flex flex-column">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title"><strong>Do not use onboarding</strong></h5>
+                        <hr>
+                        <p class="card-text flex-grow-1">If the trustpoint shall directly issue application certificates without using a domain credential, please choose No Onboarding.</p>
+                        <a href="{% url use_no_onboarding_url  %}" class="btn btn-primary mt-auto w-100" style="max-width: 250px; margin-left: auto; margin-right: auto;">
+                            No Onboarding
+                        </a>
+                    </div>
                 </div>
             </div>
-
+        </div>
     </div>
 {% endblock content %}
