--- a/trustpoint/templates/home/chart_dount_device.html
+++ b/trustpoint/templates/home/chart_dount_device.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="card rounded-5 position-relative donut-chart-card-container">
   <div class="card-body">
-    <h6 class="mb-3 fs-5">Device by Status</h6>
+    <h6 class="mb-3 fs-5">Devices by Status</h6>
 
     <div class="position-relative donut-chart-container">
       <canvas id="chart_dount_device"></canvas>
