--- a/trustpoint/templates/home/card_active_ica.html
+++ b/trustpoint/templates/home/card_active_ica.html
@@ -4,7 +4,7 @@
   <div class="card-body p-4">
     <!--header-->
     <div class="d-flex justify-content-between align-items-start mb-4">
-      <h6 class="fs-5 mb-0">Active Issuing CA</h6>
+      <h6 class="fs-5 mb-0">Active Issuing CAs</h6>
       <button
         class="btn btn-outline-light btn-sm rounded-circle d-inline-flex align-items-center justify-content-center p-0 card-count-btn-link"
         onclick="link_to_ica()">
