--- a/trustpoint/templates/home/card_expired_ica.html
+++ b/trustpoint/templates/home/card_expired_ica.html
@@ -4,7 +4,7 @@
   <div class="card-body p-4">
     <!--header-->
     <div class="d-flex justify-content-between align-items-start mb-4">
-      <h6 class="fs-5 mb-0">Expired Issuing CA</h6>
+      <h6 class="fs-5 mb-0">Expired Issuing CAs</h6>
     </div>
     <!--content-->
     <div class="d-flex align-items-end">
