--- a/trustpoint/templates/home/chart_dount_ica.html
+++ b/trustpoint/templates/home/chart_dount_ica.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="card rounded-5 position-relative donut-chart-card-container">
   <div class="card-body">
-    <h6 class="mb-3 fs-5">Issuing CA by Status</h6>
+    <h6 class="mb-3 fs-5">Issuing CAs by Status</h6>
 
     <div class="position-relative donut-chart-container">
       <canvas id="chart_dount_ica"></canvas>
