--- a/trustpoint/templates/pki/cert_profiles/confirm_delete.html
+++ b/trustpoint/templates/pki/cert_profiles/confirm_delete.html
@@ -34,7 +34,7 @@
 
             <div class="card-footer d-flex">
                 <div class="tp-card-btn-footer m-1">
-                    <a href="{% url 'pki:owner_credentials' %}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
+                    <a href="{% url 'pki:cert_profiles' %}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
                     <button type="submit" class="btn btn-danger">{% trans 'Delete Profiles' %}</button>
                 </div>
             </div>
