--- a/trustpoint/templates/management/help.html
+++ b/trustpoint/templates/management/help.html
@@ -75,7 +75,7 @@
                         </svg>
                             Report Security Issue
                     </h5>
-                    <p class="text-muted">Found something Vulnerable? Help us fix it.</p>
+                    <p class="text-muted">Found a vulnerability? Help us fix it.</p>
                     <a href="https://github.com/Trustpoint-Project/trustpoint/security/advisories/new"
                        target="_blank" class="btn btn-danger" aria-label="Report a vulnerability on GitHub">
                         Report Vulnerability
